Fixed image size on mobile

--- a/_includes/scss/homepage.scss
+++ b/_includes/scss/homepage.scss
@@ -8,11 +8,10 @@
   max-height: 100%;
   overflow: hidden;
 }
-
   img {
     display: block;
     float: left;
-    width: 200px;
+    // width: 200px;
     @media #{$tablet}, #{$mobile} {
       // display: none;
     }
